Add additional styling

--- a/src/components/UrlContainer/UrlContainer.css
+++ b/src/components/UrlContainer/UrlContainer.css
@@ -1,7 +1,13 @@
 .url {
+  width: 500px;
   border: 1px solid black;
   display: inline-block;
   margin: 10px;
   padding: 5px;
   background-color: #FFF;
+  word-wrap: break-word;
+}
+
+.urlContainer {
+  margin: 2em 0;
 }
